--- a/app.json
+++ b/app.json
@@ -4,10 +4,7 @@
     "web": {
       "bundler": "metro"
     },
-    "plugins": [
-      "expo-router"
-    ],
-    "name": "findjobs",
-    "slug": "findjobs"
+    "name": "jobsift",
+    "slug": "jobsift"
   }
 }
